updated GitHub logo overlapping issue
added a background to the content so it is better visible when using drk colours

--- a/backgroundgen.css
+++ b/backgroundgen.css
@@ -14,7 +14,6 @@ body {
   padding: 0px;
   font-family: 'Poppins', sans-serif;
   color: #333;
-  padding-top: 40px;
 
   /* text-transform: uppercase; */
   /* top: 15%; */
@@ -30,6 +29,12 @@ body {
 
 .container {
 	text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  height: calc(100vh - 60px);
+  margin: 40px auto 20px;
 }
 
 .container p{
@@ -37,6 +42,10 @@ body {
     margin: auto;
     font-weight: 200;
     margin-bottom: 2rem;
+}
+
+.content {
+  background-color: rgba(255,255,255,0.5);
 }
 
 h1 {
@@ -118,16 +127,13 @@ span {
 	-webkit-text-shadow: 0 0 2px rgb(255, 255, 0);
 }
 .githublogo {
-  position: absolute;
   margin-top: 50px;
   width: 100%;
   padding: 0em;
   display: flex;
   justify-content: center;
-  bottom: 20px;
-
 }
-/* 
+/*
 .githublogo > a{
   justify-items: center;
 } */
@@ -172,7 +178,7 @@ span {
     text-align: center;
     width: 100vw;
   }
-  
+
   .container p{
       max-width: 90vw;
       margin: auto;
@@ -180,7 +186,7 @@ span {
       margin-bottom: 2rem;
       font-size: 0.8rem;
   }
-  
+
   h1 {
     font-size: 2.5rem;
     color: rgb(0, 0, 0);
@@ -191,7 +197,7 @@ span {
   h2{
     font-size: 1rem;
   }
-  
+
   h3 {
     color: rgba(0, 0, 0, 0.5);
     text-align: center;
@@ -200,7 +206,7 @@ span {
     margin: 5px auto;
     font-weight: 500;
   }
-  
+
   #code{
     background-color: rgb(255, 255, 255);
     max-width: 90vw;
@@ -210,24 +216,24 @@ span {
     font-size: 0.75rem;
     font-weight: 500;
   }
-  
+
   .label {
     display: inline-block;
   }
-  
+
   input {
     margin: 0.5em 0.5em 0.5em 0em;
     width: 50px;
     height: 30px;
   }
-  
+
   [type="radio"] {
     display: inline-block;
     width: 15px;
     height: 15px;
     margin-right: 0.5em;
   }
-  
+
   button {
     padding: 1em;
     font-size: 0.65rem;
@@ -244,12 +250,12 @@ span {
     -moz-box-shadow: 0px 0px 10px 1px rgb(82 69 69);
     box-shadow: 0px 0px 10px 1px rgb(82 69 69);
   }
-  
+
   button:hover {
     background-color: grey;
     transition-duration: 250ms;
   }
-  
+
   span{
     text-shadow: 0 0 2px rgb(255, 255, 0); /* horizontal-offset vertical-offset 'blur' colour */
     -moz-text-shadow: 0 0 2px rgb(255, 255, 0);
@@ -264,15 +270,15 @@ span {
     justify-content: center;
     bottom: 20px;
   }
-  /* 
+  /*
   .githublogo > a{
     justify-items: center;
   } */
-  
+
   .githublogo > a >img{
     height: 50px;
     width: auto;
   }
 
-  
+
 }
